k8s/npm-ingress/npm-service.yml
apiVersion: v1
kind: Service
metadata:
  name: npm-external
  namespace: npm-ingress
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: 443
  type: ClusterIP

apiVersion: v1
kind: Endpoints
metadata:
  name: npm-external
  namespace: npm-ingress
subsets:
  - addresses:
      - ip: 192.168.68.106  # pi5server.local
    ports:
      - port: 443
