k8s/npm-ingress/service.yml
apiVersion: v1
kind: Service
metadata:
  name: npm-external
  namespace: npm-ingress
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: 443
  type: ClusterIP
