k8s/npm-ingress/ingress-route.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: npm-tcp
  namespace: npm-ingress
spec:
  entryPoints:
    - websecure
  tls:
    passthrough: true
  routes:
    - match: >
        HostSNI(`alexmihai.rocks`) ||
        HostSNI(`audiobookshelf.alexmihai.rocks`) ||
        HostSNI(`auth.alexmihai.rocks`) ||
        HostSNI(`homepage.alexmihai.rocks`) ||
        HostSNI(`ittools.alexmihai.rocks`) ||
        HostSNI(`links.alexmihai.rocks`) ||
        HostSNI(`minio.alexmihai.rocks`) ||
        HostSNI(`minio-api.alexmihai.rocks`) ||
        HostSNI(`notes.alexmihai.rocks`) ||
        HostSNI(`napogro.com`) ||
        HostSNI(`portofoolio.com`) ||
        HostSNI(`quickypass.com`)
      services:
        - name: npm-external
          port: 443
